--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "mysql2": "^3.15.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
   }
