--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dotenv": "^17.2.3",
+    "fluent-ffmpeg": "^2.1.3",
     "mysql2": "^3.15.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
